--- a/ui/html/base.layout.html
+++ b/ui/html/base.layout.html
@@ -5,8 +5,10 @@
 <html>
 <head>
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 <!--
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -34,12 +36,12 @@
   {{block "sidebar" .}}
   <h5><a href="/ktutor">Start Code</a></h5>
   <h5><a href="/stopcode">Stop Code</a></h5>
-<h5><a href="/log">Log</a></h5>
+<h5><a href="/qsolog">Log</a></h5>
 <h5><a href="/ant">Antenna</a></h5>
   {{end}}
   </div>
   
-  <div class="col-sm-6">
+  <div class="col-sm-8">
     {{template "main" .}}
     
     
