--- a/ui/html/log.page.html
+++ b/ui/html/log.page.html
@@ -6,8 +6,109 @@
 
 
 {{define "main"}}
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Add
+</button>
+<hr>
 
-<h4>Station Master Project</h4>
-<p>After I am finished with the morse code tutor-keyer, I will build this next</p>
+
+<table class="table">
+  <thead>
+    <tr>
+      {{with .Top}}
+      <th scope="col">{{.Time}}</th>
+    	<th scope="col">{{.Call}}</th>
+    	<th scope="col">{{.Mode}}</th>
+    	<th scope="col">{{.Sent}}</th>
+    	<th scope="col">{{.Rcvd}}</th>
+    	<th scope="col">{{.Band}}</th>
+    	<th scope="col">{{.Name}}</th>
+    	<th scope="col">{{.Country}}</th>
+      <th scope="col">{{.Comment}}</th>
+      <th scope="col">{{.Lotwsent}}</th>
+      <th scope="col">{{.Lotwrcvd}}</th>
+    </tr>
+    {{end}}
+  </thead>
+  <tbody>
+    {{range .Table}}
+    <tr>
+    	<th scope="col">{{.Time}}</th>
+    	<th scope="col">{{.Call}}</th>
+    	<th scope="col">{{.Mode}}</th>
+    	<th scope="col">{{.Sent}}</th>
+    	<th scope="col">{{.Rcvd}}</th>
+    	<th scope="col">{{.Band}}</th>
+    	<th scope="col">{{.Name}}</th>
+    	<th scope="col">{{.Country}}</th>
+    </tr>
+      {{end}}
+  </tbody>
+</table>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Add Contact</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+
+<form action="/addlog" method="post">
+
+<label for="basic-url" class="form-label">Call</label>
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon3">Example: AD2CC</span>
+  <input type="text" class="form-control" id="basic-url"
+  name="call" aria-describedby="basic-addon3">
+</div>
+
+<select class="form-select" aria-label="Choices" name="mode">
+  <option selected>Select operating mode</option>
+  <option value="1">USB</option>
+  <option value="2">CW</option>
+</select>
+
+<label for="basic-url" class="form-label">Sent</label>
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon3">Example: 599</span>
+  <input type="text" class="form-control" id="basic-url" name="sent" aria-describedby="basic-addon3">
+</div>
+
+<label for="basic-url" class="form-label">Rcvd</label>
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon3" >Example: 599</span>
+  <input type="text" class="form-control" id="basic-url" name="rcvd" aria-describedby="basic-addon3">
+</div>
+
+<label for="basic-url" class="form-label">Band</label>
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon3">Example: 40m</span>
+  <input type="text" class="form-control" id="basic-url" name="band" aria-describedby="basic-addon3">
+</div>
+
+<label for="basic-url" class="form-label">Name</label>
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon3">Example: Saied</span>
+  <input type="text" class="form-control" id="basic-url" name="name" aria-describedby="basic-addon3">
+</div>
+
+<label for="basic-url" class="form-label">Country</label>
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon3">Example: France</span>
+  <input type="text" class="form-control" id="basic-url" name="country" aria-describedby="basic-addon3">
+</div>
+<br><br>
+
+  <button type="submit" class="btn btn-primary">Update</button>
+</form>
+      </div>
+    </div>
+  </div>
+</div>
 
 {{end}}
