Added error checking to the logger, built logger editting

--- a/ui/html/ktutor.page.html
+++ b/ui/html/ktutor.page.html
@@ -25,7 +25,7 @@ specify. Experiment to see what is comfortable for you.</p>
 <form action="/start" method="post">
 
 <label for="basic-url" class="form-label">Sending speed in WPM</label>
-{{with .FormErrors.speed}}
+{{with .FormData.Errors.Get "speed"}}
 		<label class="error"><br><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
 	{{end}}
 <div class="input-group mb-3">
@@ -35,35 +35,38 @@ specify. Experiment to see what is comfortable for you.</p>
 </div>
 
 <label for="basic-url" class="form-label">Farnswoth speed in WPM</label>
-{{with .FormErrors.farnspeed}}
+{{with .FormData.Errors.Get "farnspeed"}}
 		<label class="error"><br><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
 	{{end}}
 <div class="input-group mb-3">
   <span class="input-group-text" id="basic-addon3">Example: {{.FarnSpeed}}</span>
-  <input type="text" class="form-control" id="basic-url" name="farnspeed" aria-describedby="basic-addon3">
+  <input type="text" class="form-control" id="basic-url" name="farnspeed" 
+  value='{{.FormData.Get "farnspeed"}}' aria-describedby="basic-addon3">
 </div>
 
 <label for="basic-url" class="form-label">Letter spacing stretch</label>
-{{with .FormErrors.lsm}}
+{{with .FormData.Errors.Get "lsm"}}
 		<label class="error"><br><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
 	{{end}}
 <div class="input-group mb-3">
   <span class="input-group-text" id="basic-addon3">Example: {{.Lsm}}</span>
-  <input type="text" class="form-control" id="basic-url" name="lsm" aria-describedby="basic-addon3">
+  <input type="text" class="form-control" id="basic-url" name="lsm" 
+  value='{{.FormData.Get "lsm"}}' aria-describedby="basic-addon3">
 </div>
 
 <label for="basic-url" class="form-label">Word spacing stretch</label>
-{{with .FormErrors.lsm}}
+{{with .FormData.Errors.Get "wsm"}}
 		<label class="error"><br><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
 	{{end}}
 <div class="input-group mb-3">
   <span class="input-group-text" id="basic-addon3" >Example: {{.Wsm}}</span>
-  <input type="text" class="form-control" id="basic-url" name="wsm" aria-describedby="basic-addon3">
+  <input type="text" class="form-control" id="basic-url" name="wsm" 
+  value='{{.FormData.Get "wsm"}}' aria-describedby="basic-addon3">
 </div>
 
-{{with .FormErrors.mode}}
+{{with .FormData.Errors.Get "mode"}}
 		<label class="error"><p style="color:rgb(255, 0, 0)">{{.}}</p></label><br>
-	{{end}}
+{{end}}	
 
 <select class="form-select" aria-label="Choices" name="mode">
   <option selected>Select operating mode</option>
@@ -73,12 +76,14 @@ specify. Experiment to see what is comfortable for you.</p>
 <br><br>
 
   <button type="submit" class="btn btn-primary">Start</button>
-  {{with .FormErrors.ktrunning}}
+  {{with .FormData.Errors.Get "ktrunning"}}
 		<label class="error"><p style="color:rgb(255, 0, 0)">{{.}}</p></label><br>
 	{{end}}
+	
+	{{end}}
+	
 </form>
 </div>
 </div>
 <br><br>
 
-{{end}}
