--- a/ui/html/base.layout.html
+++ b/ui/html/base.layout.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="/qsolog">Logger</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/ant">Antena</a>
+          <a class="nav-link" href="/ant">Antenna</a>
         </li>
       </ul>
     </div>
