--- a/ui/html/ktutor.page.html
+++ b/ui/html/ktutor.page.html
@@ -5,9 +5,7 @@
 {{define "main"}}
 
 <div class="row">
-  <div class="col-sm-2">
-  <h5><a href="/stopcode">Stop Code</a></h5>
-  </div>
+  <div class="col-sm-2"></div>
   <div class="col-sm-6">
    
 <h3>Code Tutor and Keyer</h3>
