--- a/ui/html/log.page.html
+++ b/ui/html/log.page.html
@@ -5,9 +5,11 @@
 
 {{define "main"}}
 <!-- Button trigger modal -->
+<!--
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
   Add
 </button>
+-->
 
 
 <table class="table">
@@ -54,7 +56,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add Contact</h5>
+        <h5 class="modal-title" id="exampleModalLabel">{{if .Edit}}Edit Content{{else}}Add Contact{{end}}</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -74,6 +76,7 @@
 {{with .FormData.Errors.Get "mode"}}
 		<label class="error"><br><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
 	{{end}}
+
 <select class="form-select" aria-label="Choices" name="mode">
   <option selected>Select operating mode</option>
   <option value="1">USB</option>
@@ -138,7 +141,7 @@
   <textarea class="form-control" placeholder="Leave a comment here" 
   id="floatingTextarea" name="comment" 
   value='{{if .Edit }}{{.LogEdit.Comment}}{{else}}{{.FormData.Get "comment"}}{{end}}' ></textarea>
-  <label for="floatingTextarea">Comments</label>
+  <label for="floatingTextarea">Comment</label>
 </div>
 
 <label for="basic-url" class="form-label">LOTW Rcvd</label>
