added conditional build, more testing and bug fixing

--- a/ui/html/home.page.html
+++ b/ui/html/home.page.html
@@ -5,8 +5,14 @@
 
 {{define "main"}}
 
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-6">
+   
+
 <h4>Station Master Project</h4>
 <p>This project aims to simplify ham radio operations by automating some tasks</p>
 <p>I also hope to improve on what is available today</p>
 
+</div>
 {{end}}
