--- a/ui/html/base.layout.html
+++ b/ui/html/base.layout.html
@@ -55,6 +55,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/ant">Antenna</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/quit">Quit</a>
+        </li>
       </ul>
     </div>
   </div>
