--- a/ui/html/log.page.html
+++ b/ui/html/log.page.html
@@ -6,26 +6,7 @@
 {{define "main"}}
 
 <div class="row">
-    <p>Enter your session's operating band and mode here.</p>
       <div class="row">
-  <div class="col-sm-4">
-    <select class="form-select" aria-label="select group one" id="master-band">
-      <option selected>Session's operating band</option>
-      <option value="1">160m</option>
-      <option value="2">80m</option>
-      <option value="3">40m</option>
-      <option value="4">20m</option>
-      <option value="5">10m</option>
-    </select>
-  </div>
-  <div class="col-sm-4">
-    <select class="form-select" aria-label="select group 2" id="master-mode">
-      <option selected>Session's operating mode</option>
-      <option value="1">LSB</option>
-      <option value="2">USB</option>
-      <option value="3">CW</option>
-    </select>
-  </div>
   <div class="col-sm-4">
     <form class="row g-3">
   <div class="col-auto">
@@ -64,7 +45,7 @@
     <tr>
       <th scope="col"><a href="/editlog?id={{.Id}}">{{.Id}}</a></th>
     	<th scope="col">{{.Time.Format "Jan 2 2006 15:04:05"}}</th>
-    	<th scope="col">{{.Call}}</th>
+    	<th scope="col"><a href="/contacts?contact-call={{.Call}}">{{.Call}}</a></th>
     	<th scope="col">{{.Mode}}</th>
     	<th scope="col">{{.Sent}}</th>
     	<th scope="col">{{.Rcvd}}</th>
@@ -102,17 +83,27 @@
   name="call" value='{{if .Edit }}{{.LogEdit.Call}}{{else}}{{.FormData.Get "call"}}{{end}}'aria-describedby="basic-addon3">
 </div>
 
-{{with .FormData.Errors.Get "mode"}}
-		<label class="error"><br><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
-	{{end}}
+  <label for="band-select" class="form-label">Band</label>
+  {{with .FormData.Errors.Get "band"}}
+  		<label class="error"><br><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
+  	{{end}}
+  <div class="input-group mb-3">
+    <span class="input-group-text" id="basic-addon3">Example: 40m</span>
+    <input type="text" class="form-control" name="band" id="band-select"
+    value='{{if .Edit }}{{.LogEdit.Band}}{{else}}{{.FormData.Get "band"}}{{end}}' aria-describedby="basic-addon3">
+  </div>
 
+
+  {{with .FormData.Errors.Get "mode"}}
+  		<label class="error"><br><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
+  	{{end}}
 <p class="form-label">Mode</p>
 <select class="form-select" aria-label="Choices" name="mode" id="mode-select">
 
   <option selected>Select operating mode</option>
-  <option value="USB" {{if eq .LogEdit.Mode "USB"}}selected{{end}}>USB</option>
-  <option value="LSB" {{if eq .LogEdit.Mode "LSB"}}selected{{end}}>LSB</option>
-  <option value="CW" {{if eq .LogEdit.Mode "CW"}}selected{{end}}>CW</option>
+  <option {{if .Edit}}{{if eq .LogEdit.Mode "USB"}}selected value="USB" {{end}}{{else}}{{if eq .Mode "USB"}}selected value="USB" {{end}}{{end}}>USB</option>
+  <option {{if .Edit}}{{if eq .LogEdit.Mode "LSB"}}selected value="LSB" {{end}}{{else}}{{if eq .Mode "LSB"}}selected value="LSB" {{end}}{{end}}}>LSB</option>
+  <option {{if .Edit}}{{if eq .LogEdit.Mode "CW" }}selected value="CW"  {{end}}{{else}}{{if eq .Mode "CW" }}selected value="CW"  {{end}}{{end}}}>CW</option>
 </select>
 
 <label for="sent-signal" class="form-label">Sent</label>
@@ -133,16 +124,6 @@
   <span class="input-group-text" id="basic-addon3" >Example: 599</span>
   <input type="text" class="form-control" id="rcvd-signal" name="rcvd"
   value='{{if .Edit }}{{.LogEdit.Rcvd}}{{else}}{{.FormData.Get "rcvd"}}{{end}}' aria-describedby="basic-addon3">
-</div>
-
-<label for="band-select" class="form-label">Band</label>
-{{with .FormData.Errors.Get "band"}}
-		<label class="error"><br><p style="color:rgb(255, 0, 0)">{{.}}</p></label>
-	{{end}}
-<div class="input-group mb-3">
-  <span class="input-group-text" id="basic-addon3">Example: 40m</span>
-  <input type="text" class="form-control" name="band" id="band-select"
-  value='{{if .Edit }}{{.LogEdit.Band}}{{else}}{{.FormData.Get "band"}}{{end}}' aria-describedby="basic-addon3">
 </div>
 
 <label for="name" class="form-label">Name</label>
